fix: breadcrumb now shows dynamic company name / Organization Chart

--- a/webapp/org-chart-content.html
+++ b/webapp/org-chart-content.html
@@ -97,12 +97,10 @@
         <!-- Breadcrumb -->
         <div class="absolute top-6 left-[calc(50%+140px)] -translate-x-1/2 z-30">
             <div class="glass-panel flex items-center gap-2 rounded-full px-5 py-2 shadow-lg shadow-black/20">
-                <a class="text-sm font-medium text-slate-400 hover:text-white transition-colors" href="#">Acme Corp</a>
+                <a id="oc-breadcrumb-company-static"
+                    class="text-sm font-medium text-slate-400 hover:text-white transition-colors" href="#">Acme Corp</a>
                 <span class="text-slate-600">/</span>
-                <a class="text-sm font-medium text-slate-400 hover:text-white transition-colors"
-                    href="#">Engineering</a>
-                <span class="text-slate-600">/</span>
-                <span class="text-sm font-semibold text-indigo-400">Platform Engineering</span>
+                <span class="text-sm font-semibold text-indigo-400">Organization Chart</span>
             </div>
         </div>
 
