--- a/webapp/index.html
+++ b/webapp/index.html
@@ -535,13 +535,11 @@
                     <div class="flex justify-center mb-8">
                         <div
                             class="glass-panel flex items-center gap-2 rounded-full px-5 py-2 shadow-lg shadow-black/20">
-                            <a class="text-sm font-medium text-slate-400 hover:text-white transition-colors"
-                                href="#">Acme
-                                Corp</a>
+                            <a id="oc-breadcrumb-company"
+                                class="text-sm font-medium text-slate-400 hover:text-white transition-colors"
+                                href="#">Acme Corp</a>
                             <span class="text-slate-600">/</span>
-                            <span class="text-sm font-medium text-slate-400">Engineering</span>
-                            <span class="text-slate-600">/</span>
-                            <span class="text-sm font-semibold text-indigo-400">Platform Engineering</span>
+                            <span class="text-sm font-semibold text-indigo-400">Organization Chart</span>
                         </div>
                     </div>
 
