--- a/webapp/index.html
+++ b/webapp/index.html
@@ -2288,13 +2288,16 @@
         <!-- Scripts -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-        <script src="firebase-config.js?v=4"></script>
+        <!-- Firebase SDK (compat) -->
+        <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app-compat.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore-compat.js"></script>
+        <script src="firebase-config.js?v=8"></script>
         <script src="shared-employees.js?v=4"></script>
-        <script src="shared-admin-users.js?v=4"></script>
+        <script src="shared-admin-users.js?v=8"></script>
         <script src="shared-logs.js?v=6"></script>
         <script src="shared-departments.js?v=4"></script>
         <script src="notification-store.js?v=4"></script>
-        <script src="auth.js?v=4"></script>
+        <script src="auth.js?v=8"></script>
         <script src="monday-integration.js?v=4"></script>
         <script src="monday-integration-ui.js?v=4"></script>
         <script src="company-settings.js?v=4"></script>
@@ -2304,7 +2307,7 @@
         <script src="user-management.js?v=4"></script>
         <script src="app.js?v=4"></script>
         <script src="notifications.js?v=4"></script>
-        <script src="auth-ui.js?v=4"></script>
+        <script src="auth-ui.js?v=8"></script>
 </body>
 
 </html>
