feat: add Viewer role, lock Employee Directory and Integrations for guests/viewers

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -1364,6 +1364,7 @@
                                             <option value="">All Roles</option>
                                             <option value="Super Admin">Super Admin</option>
                                             <option value="Admin">Admin</option>
+                                            <option value="Viewer">Viewer</option>
                                         </select>
                                         <span
                                             class="material-symbols-outlined absolute right-3 top-1/2 -translate-y-1/2 text-[#9dabb9] pointer-events-none">expand_more</span>
@@ -1480,6 +1481,7 @@
                                 class="form-select w-full appearance-none rounded-lg border border-[#e5e7eb] dark:border-[#3b4754] bg-[#f9fafb] dark:bg-[#111418] text-[#111418] dark:text-white h-10 px-3 text-sm focus:ring-2 focus:ring-primary/50 outline-none transition-all cursor-pointer">
                                 <option value="Super Admin">Super Admin</option>
                                 <option value="Admin" selected>Admin</option>
+                                <option value="Viewer">Viewer</option>
                             </select>
                         </div>
                         <div>
