--- a/webapp/index.html
+++ b/webapp/index.html
@@ -38,7 +38,7 @@
         }
     </script>
     <link href="styles.css?v=5" rel="stylesheet" />
-    <link href="org-chart.css?v=4" rel="stylesheet" />
+    <link href="org-chart.css?v=5" rel="stylesheet" />
     <link href="integrations.css?v=4" rel="stylesheet" />
     <link href="notifications.css?v=4" rel="stylesheet" />
     <link href="auth.css?v=4" rel="stylesheet" />
@@ -533,6 +533,14 @@
                 <!-- Canvas Scroll Area -->
                 <div id="org-chart-canvas"
                     class="canvas-dot-pattern absolute top-[68px] left-0 right-0 bottom-0 overflow-auto py-10 pr-10 pl-[340px] cursor-grab">
+
+                    <!-- Department View Pill Bar -->
+                    <div id="oc-dept-view-bar"
+                        class="sticky top-0 left-0 z-30 flex items-center gap-2 flex-wrap pb-4 pt-0 pointer-events-none">
+                        <div class="flex items-center gap-2 flex-wrap pointer-events-auto" id="oc-dept-pills">
+                            <!-- Populated dynamically -->
+                        </div>
+                    </div>
 
                     <!-- Breadcrumb -->
                     <div class="flex justify-center mb-8">
@@ -2307,7 +2315,7 @@
         <script src="monday-integration-ui.js?v=4"></script>
         <script src="company-settings.js?v=9"></script>
         <script src="settings.js?v=4"></script>
-        <script src="org-chart.js?v=24"></script>
+        <script src="org-chart.js?v=25"></script>
         <script src="employee-directory.js?v=4"></script>
         <script src="user-management.js?v=4"></script>
         <script src="app.js?v=4"></script>
