--- a/webapp/index.html
+++ b/webapp/index.html
@@ -543,7 +543,7 @@
                     </div>
 
                     <!-- Breadcrumb -->
-                    <div class="flex justify-center mb-8">
+                    <div class="sticky left-0 flex justify-center mb-8" style="width: 100vw; max-width: 100%;">
                         <div
                             class="glass-panel flex items-center gap-2 rounded-full px-5 py-2 shadow-lg shadow-black/20">
                             <a id="oc-breadcrumb-company"
